[project]
name = "comfyui-stablediffusion3-api"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-StableDiffusion3-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-StableDiffusion3-API"
Icon = ""
